--- a/adminpassword.html
+++ b/adminpassword.html
@@ -4,7 +4,7 @@
 <head>
     < metacharset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta http-equiv="Refresh" content="0; URL=https://https://avnanswers.000webhostapp.com/adminpassword/">
+    <meta http-equiv="Refresh" content="0; URL=https://avnanswers.000webhostapp.com/adminpassword/">
 </head>
 <body>
 </body>
