--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta http-equiv="Refresh" content="0; URL=https://avnanswers.000webhostapp.com/">
+    <script>
+        document.location.href = "https://officialbektur.github.io/avnanswers/"
+    </script>
 </head>
 <body>
 </body>
