--- a/adminpassword/index.html
+++ b/adminpassword/index.html
@@ -1,10 +1,12 @@
-<!-------------------- Password Avn Answers -------------------->
+<!--------------------  Avn Answers  -------------------->
 <!DOCTYPE html>
 <html>
 <head>
-    < metacharset="UTF-8">
+    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta http-equiv="Refresh" content="0; URL=https://avnanswers.000webhostapp.com/adminpassword/update/">
+    <script>
+        document.location.href = "https://avnanswers.000webhostapp.com/adminpassword/update/"
+    </script>
 </head>
 <body>
 </body>
