--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <script>
-        document.location.href = "https://officialbektur.github.io/avnanswers/"
+        document.location.href = "https://avnanswers.000webhostapp.com/"
     </script>
 </head>
 <body>
