--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 </head>
 <body>
 	<div class="wrapper">
-		<a href="https://avnanswers.000webhostapp.com/">ПЕРЕЙТИ НА САЙТ</a>
+		<a href="http://ci80697.tmweb.ru/">ПЕРЕЙТИ НА САЙТ</a>
 	</div>
 </body>
 </html>
