--- a/index.html
+++ b/index.html
@@ -86,11 +86,15 @@
 			}
 			.wrapper {
 				display: flex;
+				flex-direction: column;
 				justify-content: center;
 				align-items: center;
 			}
 			.wrapper a {
-				padding: 26px 22px;
+				margin: 26px 22px;
+				padding: 26px 0px;
+				max-width: 450px;
+				width: 100%;
 				color: #ffffff;
 				font-size: 1.6em;
 				font-weight: 700;
@@ -104,7 +108,9 @@
 </head>
 <body>
 	<div class="wrapper">
-		<a href="http://ci80697.tmweb.ru/">ПЕРЕЙТИ НА САЙТ</a>
+		<a href="http://avnanswers.ezyro.com/ld20/">САЙТ - ЛД20</a>
+		<a href="http://avnanswers.ezyro.com/farm/">САЙТ - FARM</a>
+		<a href="http://avnanswers.ezyro.com/bbb/">САЙТ - BBB</a>
 	</div>
 </body>
 </html>
