--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 	<div class="wrapper">
 		<a href="http://avnanswers.ezyro.com/ld20/">САЙТ - ЛД20</a>
 		<a href="http://avnanswers.ezyro.com/farm/">САЙТ - FARM</a>
-		<a href="http://avnanswers.ezyro.com/bbb/">САЙТ - BBB</a>
+		<a href="http://avnanswers.ezyro.com/ddd/">САЙТ - DDD</a>
 	</div>
 </body>
 </html>
