--- a/index.html
+++ b/index.html
@@ -108,8 +108,7 @@
 </head>
 <body>
 	<div class="wrapper">
-		<a href="http://avnanswers.ezyro.com/ld20/">САЙТ - ЛД20</a>
-		<a href="http://avnanswers.ezyro.com/farm/">САЙТ - FARM</a>
+		<a href="http://avnanswers.ezyro.com/">ПЕРЕЙТИ НА САЙТ</a>
 	</div>
 </body>
 </html>
