--- a/adminpassword/adminpassword.html
+++ b/adminpassword/adminpassword.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <script>
-        document.location.href = "http://avnanswers.ezyro.com/ld20/adminpassword/update/"
+        document.location.href = "http://avnanswers.ezyro.com/"
     </script>
 </head>
 <body>
