--- a/adminpassword/adminpassword.html
+++ b/adminpassword/adminpassword.html
@@ -1,13 +1,114 @@
-<!--------------------  Avn Answers Admin Password  -------------------->
+<!--------------------  Avn Answers  -------------------->
 <!DOCTYPE html>
 <html>
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <script>
-        document.location.href = "http://avnanswers.ezyro.com/updatepassword.php"
-    </script>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+	<style>
+		/* =============================================  Zeroing  --Start--  ============================================= */
+			* {
+				padding: 0px 0px;
+				margin: 0px 0px;
+				border: 0;
+			}
+			*, *::before, *::after {
+				-webkit-box-sizing: border-box;
+				box-sizing: border-box;
+			}
+			:focus, :active,
+			a:focus, a:active {
+				outline: none;
+			}
+
+			nav, footer, header, aside {
+				display: block;
+			}
+
+			html, body {
+				height: 100%;
+				width: 100%;
+				line-height: 1;
+				font-size: 16px;
+				background-color: #262626;
+				-ms-text-size-adjust: 100%;
+					-moz-text-size-adjust: 100%;
+						-webkit-text-size-adjust: 100%;
+			}
+
+			input, button, textarea {
+				font-family: inherit;
+			}
+
+			input::-ms-clear {
+				display: none;
+			}
+
+			button {
+				cursor: pointer;
+			}
+
+			button::-moz-focus-inner {
+				padding: 0px 0px;
+				border: 0;
+			}
+
+			a,
+			a:visited {
+				text-decoration: none;
+				-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+			}
+
+			a:hover {
+				text-decoration: none;
+			}
+
+			ul li {
+				list-style: none;
+			}
+
+			img {
+				width: 100%;
+				height: 100%;
+				vertical-align: top;
+			}
+
+			h1, h2, h3, h4, h5, h6 {
+				font-size: inherit;
+				font-weight: inherit;
+			}
+			body {
+				width: 100%;
+				height: 100%;
+				display: flex;
+				justify-content: center;
+				align-items: center;
+				overflow: hidden;
+			}
+			.wrapper {
+				display: flex;
+				flex-direction: column;
+				justify-content: center;
+				align-items: center;
+			}
+			.wrapper a {
+				margin: 26px 22px;
+				padding: 26px 0px;
+				max-width: 450px;
+				width: 100%;
+				color: #ffffff;
+				font-size: 1.6em;
+				font-weight: 700;
+				letter-spacing: 1.5px;
+				line-height: 150%;
+				text-transform: uppercase;
+				text-align: center;
+				background-color: #20a000;
+			}
+	</style>
 </head>
 <body>
+	<div class="wrapper">
+		<a href="http://avnanswers.ezyro.com/">ПЕРЕЙТИ НА САЙТ</a>
+	</div>
 </body>
 </html>
